force-app/main/default/objects/Patient_State__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Patient States</relationshipLabel>
    <relationshipName>Patient_States</relationshipName>
    <type>Lookup</type>
</CustomField>