force-app/main/default/objects/Patient_State__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient States</relationshipLabel>
    <relationshipName>Patient_States</relationshipName>
    <type>Lookup</type>
</CustomField>