force-app/main/default/objects/Patient_State__c/fields/PatientId__c.field-meta.xml
<CustomField>
    <fullName>PatientId__c</fullName>
    <label>PatientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>