force-app/main/default/objects/Patient_State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_State__c</columns>
    <columns>PatientId__c</columns>
    <columns>Contact__c</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>